--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/common": "^19.2.0",
-    "@angular/compiler": "^19.2.0",
+    "@angular/compiler": "^19.2.18",
     "@angular/core": "^19.2.0",
     "@angular/fire": "^19.2.0",
     "@angular/forms": "^19.2.0",
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@emailjs/browser": "^4.4.1",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "crypto-js": "^4.2.0",
     "firebase": "^11.10.0",
