--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "crypto-js": "^4.2.0",
+    "csv-parser": "^3.2.0",
+    "file-saver": "^2.0.5",
     "firebase": "^11.10.0",
+    "multer": "^2.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
